k8s/test-pod-agentpool.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-agentpool
  namespace: default
  labels:
    app: canyon
spec:
  nodeSelector:
    agentpool: copprfpool
  containers:
    - name: nginx
      image: nginx
