k8s/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: default
  labels:
    app: myapp
    environment: prod
spec:
  containers:
    - name: nginx
      image: nginx
