k8s/awesome-mutator-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: awesome-mutator
webhooks:
  - name: awesome-mutator.cast.ai
    clientConfig:
      service:
        name: awesome-mutator-service
        namespace: default
        path: /mutate
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURlekNDQW1PZ0F3SUJBZ0lVWFVha0lFVDhlWUozVm9IOGFQT056bHlrbUZ3d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xqRXNNQ29HQTFVRUF3d2pZWGRsYzI5dFpTMXRkWFJoZEc5eUxYTmxjblpwWTJVdVpHVm1ZWFZzZEM1egpkbU13SGhjTk1qUXdPVEEwTURBMU1ESXlXaGNOTWpVd09UQTBNREExTURJeVdqQXVNU3d3S2dZRFZRUUREQ05oCmQyVnpiMjFsTFcxMWRHRjBiM0l0YzJWeWRtbGpaUzVrWldaaGRXeDBMbk4yWXpDQ0FTSXdEUVlKS29aSWh2Y04KQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUxMamdRRW5qY2M0WmQzUXo4SnNnNzZPM0xCYkpaQnNFcUVsVlBmLwpoc3UraFJMd3p [...]
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    admissionReviewVersions: ["v1"]
    failurePolicy: Ignore  # Fail open on webhook errors
    sideEffects: None
